--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-between content-container">
     <div class="col">
-        <mat-card class="select-card" (click)="navigateToPage()">
+        <mat-card class="select-card" (click)="navigateToPage('/new-order')">
             <p>
                 <span class="pe-2">
                     <mat-icon>shopping_cart</mat-icon>
@@ -9,7 +9,7 @@
         </mat-card>
     </div>
     <div class="col">
-        <mat-card class="select-card" (click)="navigateToPage()">
+        <mat-card class="select-card" (click)="navigateToPage('/finance')">
             <p>
                 <span class="pe-2">
                     <mat-icon>list</mat-icon>
@@ -19,7 +19,7 @@
         </mat-card>
     </div>
     <div class="col">
-        <mat-card class="select-card" (click)="navigateToPage()">
+        <mat-card class="select-card" (click)="navigateToPage('/manage-store')">
             <p>
                 <span class="pe-2">
                     <mat-icon>store</mat-icon>
